crates/tap-agent/src/agent/snapshots/indexer_tap_agent__agent__sender_allocation__tests__rav_request_when_all_receipts_invalid-3.snap
---
source: crates/tap-agent/src/agent/sender_allocation.rs
expression: rav_error_response_message
---
UpdateInvalidReceiptFees(
    0x000000000000000000000000fa44c72b753a66591f241c7dc04e8178c30e13af,
    UnaggregatedReceipts {
        value: 16220184412847561580,
        last_id: 0,
        counter: 0,
    },
)
