crates/tap-agent/src/agent/snapshots/indexer_tap_agent__agent__sender_allocation__tests__should_return_invalid_receipts_on_startup.snap
---
source: crates/tap-agent/src/agent/sender_allocation.rs
expression: update_invalid_msg
---
UpdateInvalidReceiptFees(
    AllocationId(
        0x000000000000000000000000fa44c72b753a66591f241c7dc04e8178c30e13af,
    ),
    UnaggregatedReceipts {
        value: 55,
        last_id: 10,
        counter: 10,
    },
)
