crates/tap-agent/src/agent/snapshots/indexer_tap_agent__agent__sender_allocation__tests__should_update_unaggregated_fees_on_start.snap
---
source: crates/tap-agent/src/agent/sender_allocation.rs
expression: last_message_emitted
---
UpdateReceiptFees(
    Horizon(
        0x000000000000000000000000fa44c72b753a66591f241c7dc04e8178c30e13af,
    ),
    UpdateValue(
        UnaggregatedReceipts {
            value: 55,
            last_id: 10,
            counter: 10,
        },
    ),
)
